styles(theme): fix long math equation overflow

--- a/src/client/theme-default/styles/base.css
+++ b/src/client/theme-default/styles/base.css
@@ -244,6 +244,8 @@ vite-error-overlay {
 mjx-container {
   display: inline-block;
   margin: auto 2px -2px;
+  overflow-x: auto;
+  overflow-y: clip;
 }
 
 mjx-container > svg {
